--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -282,7 +282,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/lineaH"
-                    app:srcCompat="@drawable/Mapa_prueba" />
+                    app:srcCompat="@drawable/mapa_prueba" />
 
                 <ImageView
                     android:id="@+id/imageView21"
@@ -291,6 +291,16 @@
                     app:srcCompat="@drawable/ic_d_icono1"
                     tools:layout_editor_absoluteX="81dp"
                     tools:layout_editor_absoluteY="458dp" />
+
+                <ImageView
+                    android:id="@+id/imageView22"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="24dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView21"
+                    app:layout_constraintStart_toStartOf="@+id/imageView21"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView21"
+                    app:srcCompat="@drawable/ic_d_icono2" />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
