--- a/app/src/main/res/layout/niveles_iconos_row.xml
+++ b/app/src/main/res/layout/niveles_iconos_row.xml
@@ -7,7 +7,7 @@
 
     >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:cardMaxElevation="2dp"
@@ -57,6 +57,6 @@
         </RelativeLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
