--- a/app/src/main/res/layout/pop_up_close_session.xml
+++ b/app/src/main/res/layout/pop_up_close_session.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="7dp"
         android:elevation="5dp"
         android:layout_alignParentRight="true" />
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -92,6 +92,6 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
