--- a/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
+++ b/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="7dp"
         android:elevation="5dp"
         android:layout_alignParentRight="true" />
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -72,7 +72,7 @@
 
                 />
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -107,6 +107,6 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
