--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -35,7 +35,7 @@
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,168 +112,33 @@
                     app:layout_constraintStart_toEndOf="@+id/imageView21"
                     app:layout_constraintTop_toTopOf="@+id/imageView21" />
 
-                <ImageView
-                    android:id="@+id/imageGeneroMiCuenta"
-                    android:layout_width="36dp"
-                    android:layout_height="34dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:srcCompat="@drawable/ic_genero_otro"
-                    tools:layout_editor_absoluteY="786dp" />
-
                 <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Genero"
-                    android:textColor="@color/principalBlue"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageGeneroMiCuenta" />
-
-                <TextView
-                    android:id="@+id/generoMICuenta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/telefonoMICuenta2"
+                    android:layout_width="252dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:lineSpacingExtra="8sp"
-                    android:text="TextView"
+                    android:text="Direccion Axuiliar paramericana norte"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView22"
+                    app:layout_constraintStart_toEndOf="@+id/imageView22"
+                    app:layout_constraintTop_toTopOf="@+id/imageView22" />
 
                 <TextView
-                    android:id="@+id/linea4"
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/blue_rectangle"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/generoMICuenta" />
-
-                <ImageView
-                    android:id="@+id/imageFechaNacMiCuenta"
-                    android:layout_width="47dp"
-                    android:layout_height="38dp"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linea4"
-                    app:srcCompat="@drawable/ic_fecha"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Fecha de Nacimiento"
-                    android:textColor="@color/principalBlue"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageFechaNacMiCuenta" />
-
-                <TextView
-                    android:id="@+id/fechaNacMICuenta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/telefonoMICuenta3"
+                    android:layout_width="202dp"
+                    android:layout_height="23dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:lineSpacingExtra="8sp"
-                    android:text="TextView"
+                    android:text="Hora de compra: 10 pm"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-                <TextView
-                    android:id="@+id/linea5"
-                    android:layout_width="0dp"
-                    android:layout_height="2dp"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="32dp"
-                    android:background="@drawable/blue_rectangle"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/fechaNacMICuenta" />
-
-                <ImageView
-                    android:id="@+id/imageLugarOrigen"
-                    android:layout_width="37dp"
-                    android:layout_height="42dp"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linea5"
-                    app:srcCompat="@drawable/ic_lugar"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Lugar de Origen"
-                    android:textColor="@color/principalBlue"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageLugarOrigen" />
-
-                <TextView
-                    android:id="@+id/lugarOrigenMICuenta"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:lineSpacingExtra="8sp"
-                    android:text="TextView"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-                <Button
-                    android:id="@+id/buttonEditarCuenta"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="35dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginEnd="35dp"
-                    android:background="@drawable/ic_fondolleno"
-                    android:text="Editar mi Perfil"
-                    android:textColor="@color/colorAccent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/lugarOrigenMICuenta" />
-
-                <Button
-                    android:id="@+id/buttonCerrarSesion"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="64dp"
-                    android:background="@drawable/ic_fondolleno"
-                    android:text="Cerrar Sesion"
-                    android:textColor="@color/colorAccent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/buttonEditarCuenta" />
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView23"
+                    app:layout_constraintStart_toEndOf="@+id/imageView23"
+                    app:layout_constraintTop_toTopOf="@+id/imageView23" />
 
                 <ImageView
                     android:id="@+id/imageView16"
@@ -296,11 +161,32 @@
                     android:id="@+id/imageView22"
                     android:layout_width="0dp"
                     android:layout_height="27dp"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="32dp"
                     app:layout_constraintEnd_toEndOf="@+id/imageView21"
                     app:layout_constraintStart_toStartOf="@+id/imageView21"
                     app:layout_constraintTop_toBottomOf="@+id/imageView21"
                     app:srcCompat="@drawable/ic_d_icono2" />
+
+                <ImageView
+                    android:id="@+id/imageView23"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView22"
+                    app:layout_constraintStart_toStartOf="@+id/imageView22"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView22"
+                    app:srcCompat="@drawable/ic_d_icono3" />
+
+                <ImageView
+                    android:id="@+id/imageView24"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView23"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/imageView23"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView23"
+                    app:srcCompat="@drawable/ic_d_icono3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
