--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -169,12 +169,17 @@
                 android:id="@+id/textView19"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                android:layout_marginBottom="16dp"
-                android:text="TextView"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="32dp"
+                android:text="La biología al servicio de la dermatologia"
+                android:textAlignment="center"
+                android:textColor="@color/principalBlue"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/btnFacebook"
-                app:layout_constraintStart_toStartOf="@+id/btnTwitter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnTwitter" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
