--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -19,6 +19,7 @@
         tools:visibility="visible">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -33,9 +34,8 @@
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
+            android:layout_width="417dp"
+            android:layout_height="735dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +140,49 @@
                     app:layout_constraintStart_toEndOf="@+id/imageView23"
                     app:layout_constraintTop_toTopOf="@+id/imageView23" />
 
+                <TextView
+                    android:id="@+id/telefonoMICuenta4"
+                    android:layout_width="202dp"
+                    android:layout_height="23dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:lineSpacingExtra="8sp"
+                    android:text="Fecha 06/10/19"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView25"
+                    app:layout_constraintStart_toEndOf="@+id/imageView25"
+                    app:layout_constraintTop_toTopOf="@+id/imageView25" />
+
+                <TextView
+                    android:id="@+id/telefonoMICuenta5"
+                    android:layout_width="202dp"
+                    android:layout_height="23dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:lineSpacingExtra="8sp"
+                    android:text="Producto:"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView24"
+                    app:layout_constraintStart_toEndOf="@+id/imageView24"
+                    app:layout_constraintTop_toTopOf="@+id/imageView24" />
+
+                <TextView
+                    android:id="@+id/telefonoMICuenta7"
+                    android:layout_width="181dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="36dp"
+                    android:layout_marginBottom="8dp"
+                    android:lineSpacingExtra="8sp"
+                    android:text="Phototherm Max Fluide SPF 100"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView26"
+                    app:layout_constraintStart_toEndOf="@+id/imageView26"
+                    app:layout_constraintTop_toTopOf="@+id/imageView26"
+                    app:layout_constraintVertical_bias="0.0" />
+
                 <ImageView
                     android:id="@+id/imageView16"
                     android:layout_width="0dp"
@@ -153,9 +196,12 @@
                     android:id="@+id/imageView21"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_d_icono1"
-                    tools:layout_editor_absoluteX="81dp"
-                    tools:layout_editor_absoluteY="458dp" />
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="200dp"
+                    app:layout_constraintEnd_toEndOf="@+id/lineaH2"
+                    app:layout_constraintStart_toStartOf="@+id/lineaH2"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView16"
+                    app:srcCompat="@drawable/ic_d_icono1" />
 
                 <ImageView
                     android:id="@+id/imageView22"
@@ -182,11 +228,32 @@
                     android:layout_width="0dp"
                     android:layout_height="27dp"
                     android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView25"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/imageView25"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView25"
+                    app:srcCompat="@drawable/ic_d_icono5" />
+
+                <ImageView
+                    android:id="@+id/imageView26"
+                    android:layout_width="145dp"
+                    android:layout_height="116dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView24"
+                    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+
+                <ImageView
+                    android:id="@+id/imageView25"
+                    android:layout_width="0dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="32dp"
                     app:layout_constraintEnd_toEndOf="@+id/imageView23"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageView23"
                     app:layout_constraintTop_toBottomOf="@+id/imageView23"
-                    app:srcCompat="@drawable/ic_d_icono3" />
+                    app:srcCompat="@drawable/ic_d_icono4" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
