--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -219,13 +219,19 @@
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="wrap_content"
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/botton_navigation" />
+        app:menu="@menu/botton_navigation"
+        android:background="#334D6B">
+
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
 
