ya con el rv donde se muestran los productos uwu

--- a/app/src/main/res/layout/content_product_menu.xml
+++ b/app/src/main/res/layout/content_product_menu.xml
@@ -12,6 +12,10 @@
         android:id="@+id/rvProductosMenu"
         android:layout_width="395dp"
         android:layout_height="659dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
