--- a/app/src/main/res/layout/item_producto_rv.xml
+++ b/app/src/main/res/layout/item_producto_rv.xml
@@ -5,7 +5,9 @@
     android:layout_width="150dp"
     android:layout_height="250dp"
     android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp">
+    cardview:cardCornerRadius="4dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
