--- a/app/src/main/res/layout/item_producto_en_descuento.xml
+++ b/app/src/main/res/layout/item_producto_en_descuento.xml
@@ -31,8 +31,8 @@
 
             <ImageView
                 android:id="@+id/imagenProductoDescuento"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
