--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FFFFFF</color>
-    <color name="principalBlue">#344D6B</color>
+    <color name="principalBlue">#FFFFFF</color>
     <color name="node">#F5A10C</color>
 </resources>
